--- a/access/css/Global.css
+++ b/access/css/Global.css
@@ -20,6 +20,7 @@ html {
     --card-curve: 6px;
     --border-color: #eee;
     --border-color-light: ##f8f9fa;
+    --light-bg-color: #F7F9FC;
 
     --card-box-shadow: 1px 5px 7.5px rgba(14, 13, 13, 0.2);
     --card-hover-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.09);
@@ -52,6 +53,8 @@ html {
     font-size: 16px;
     line-height: 22.5px;
     font-weight: 400;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .container {
