--- a/access/css/feature.css
+++ b/access/css/feature.css
@@ -70,6 +70,7 @@
     font-size: 20px;
     margin: 0;
     transition: .2s;
+    color: var(--title-color);
 }
 
 .featured__tabs input+label div span {
