--- a/access/css/footer.css
+++ b/access/css/footer.css
@@ -16,11 +16,70 @@ footer .footer-item {
     margin-top: 1.5rem;
 }
 
-footer .footer-last-item {
+footer .footer-lasted-item {
+    margin-top: 45px;
+}
+
+footer .footer__box {
     background-color: var(--bgr-color);
     padding: 2em;
     border-radius: var(--card-curve);
     box-shadow: var(--card-box-shadow);
+}
+
+footer .footer__box form {
+    margin-bottom: 15px;
+    justify-content: space-between;
+}
+
+footer .footer__box p:first-of-type {
+    font-size: 18px;
+    line-height: 25px;
+    color: var(--title-color);
+    margin-bottom: 30px;
+    font-weight: 500;
+}
+
+footer .footer__box p:last-of-type {
+    line-height: 22px;
+    color: var(--text-color);
+    font-size: 16px;
+}
+
+footer .footer__box .form-inline {
+    height: 48px;
+    align-items: stretch;
+}
+
+footer .footer__box .form-group {
+    width: 78%;
+    margin: 0;
+}
+
+footer .footer__box input[type="email"] {
+    background-color: var(--light-bg-color);
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    color: var(--title-color);
+    font-weight: 600;
+    border-radius: var(--card-curve);
+}
+
+footer .footer__box button {
+    width: 20%;
+    text-align: center;
+    padding: 6px 10px;
+    background-color: var(--primary);
+    border: none;
+    outline: none;
+    font-weight: 600;
+    cursor: pointer;
+    color: #fff;
+    border-radius: var(--card-curve);
 }
 
 footer ul li {
@@ -38,6 +97,43 @@ footer ul li a {
     text-transform: capitalize;
 }
 
+
+footer .below-section .copyrights {
+    line-height: 22px;
+    color: var(--text-color);
+    font-size: 16px;
+    margin: 0;
+}
+
+footer .below-section .copyrights .copyrights-link {
+    color: var(--title-color)
+}
+
+footer .below-section {
+    border-top: 1px solid var(--border-color);
+}
+
+footer .below-section .social {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .below-section .social li {
+    display: block;
+    margin-right: 10px;
+}
+
+footer .below-section .social li a {
+    color: var(--title-color);
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    display: inline-block;
+    text-align: center;
+    font-size: 14px;
+}
+
 @media (min-width: 100px) and (max-width: 420px) {
     footer {
         padding: 2em 0;
@@ -53,5 +149,26 @@ footer ul li a {
 @media (min-width: 100px) and (max-width: 801px) {
     footer h3 {
         margin-bottom: 18px;
+    }
+}
+
+@media (min-width:421px) {
+    footer .footer__box .form-inline {
+        flex-wrap: nowrap;
+    }
+    footer .footer__box button {
+        width: 30%;
+    }
+}
+
+@media (min-width:992px) {
+    footer .footer-lasted-item {
+        margin-top: 1.5rem;
+    }
+
+    footer .below-section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 }
