--- a/access/css/header.css
+++ b/access/css/header.css
@@ -185,6 +185,9 @@ button.navbar-toggler.collapsed .icon-expand{
     top: 8px;
     left: 2px;
 }
+.gg-moon:hover{
+    cursor: pointer;
+}
 .navbar-collapse{
     padding: 20px 0;
 }
