--- a/access/css/style.css
+++ b/access/css/style.css
@@ -7,6 +7,10 @@
 @import url(./support.css);
 /* ABOUT  */
 @import url(./about.css);
+/* COUNTER  */
+@import url(./counter.css);
+/* SOLOGAN  */
+@import url(./sologan.css);
 @import url(./general.css);
 @import url(./feature.css);
 @import url(./feedback.css);
