--- a/access/css/support.css
+++ b/access/css/support.css
@@ -46,11 +46,12 @@
     color: var(--title-color);
     line-height: 35px;
     font-weight: 700;
+    margin: 16px 0;
 }
-.support-box p{
+.support-item .support-box p{
     font-size: 16px;
     color: var(--text-color);
-    margin-top: 15px;
+    margin: 15px 0 0;
     line-height: 25px;
 }
 .support-item .support-box:hover{
