--- a/access/css/Global.css
+++ b/access/css/Global.css
@@ -19,7 +19,7 @@ html {
     --light-bg-color: #F7F9FC;
     --card-curve: 6px;
     --border-color: #eee;
-    --border-color-light: ##f8f9fa;
+    --border-color-light: #f8f9fa;
     --light-bg-color: #F7F9FC;
 
     --card-box-shadow: 1px 5px 7.5px rgba(14, 13, 13, 0.2);
