--- a/access/css/carousel.css
+++ b/access/css/carousel.css
@@ -14,7 +14,10 @@
 .box-carousel{
     position: relative;
     z-index: 1;
-    background: linear-gradient(to right, var(--bg-color), rgba(255, 255, 255, 0.92)), url(../image/banner.jpg);
+    background: linear-gradient(to right, 
+                                var(--bgr-color),
+                                rgba(255, 255, 255,0.92)), 
+                                url(../image/banner.jpg);
     overflow: hidden;
     background-repeat: no-repeat;
     background-position: center;
@@ -23,6 +26,7 @@
     display: grid;
     align-items: center;
     padding-top: 5rem;
+    transform: translateY(-5px);
 }
 
 .box-carousel .crs-contentText h3{
